--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,16 @@
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
             android:theme="@style/FullscreenTheme" >
+
+        </activity>
+        <activity
+            android:name=".MultiPlayerGameActivity"
+            android:label="@string/title_activity_multi_player_game" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".util.MultiPlayerGameActivity"
-            android:label="@string/title_activity_multi_player_game" >
         </activity>
     </application>
 
